<resources>
    <string name="app_name">GP229 CES</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="confirm">confirm</string>
    <string name="music">Music</string>
    <string name="settings">Settings</string>
    <string name="speaker_options">SPEAKER OPTIONS</string>
    <string name="about">About</string>
    <string name="dashboard">Dashboard</string>
    <string name="sources">Sources</string>
    <string name="lighting">Lighting</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="select_an_input">Select an input</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="aux_in">Aux-In</string>
    <string name="creative_halo">Creative Halo</string>
    <string name="ver_info">Version 1.1.48</string>
    <string name="copyright_info">Copyright © Creative Technology Ltd., 2016-2017.\nAll rights reserved.</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="firmware_ver">Firmware Version 2.0.3</string>
    <string name="audio_prompts">Audio Prompts</string>
    <string name="voice_and_tones">Voice and Tones</string>
    <string name="auto_standby">Auto Standby</string>
    <string name="auto_standby_hint">Switch to standby mode after one day being idle</string>
    <string name="reset_to_default">Reset to factory default</string>
    <string name="reset_to_default_hint">Restore all your configuration to original conditioin</string>
    <string name="off">off</string>
    <string name="on_capital">ON</string>
    <string name="off_capital">OFF</string>
    <string name="tones_only">Tones Only</string>
    <string name="moon_light">Moonlight</string>
    <string name="fireworks">Fireworks</string>
    <string name="blue_skies">Blue Skies</string>
    <string name="rainbow">Rainbow</string>
    <string name="pulsate">Pulsate</string>
    <string name="glow">Glow</string>
    <string name="monochrome">Monochrome</string>
    <string name="no_support_ble">Phone does not support BLE !</string>
    <string name="open_ble">Whether to open the Bluetooth?</string>
    <string name="conn_timeout">Connection timeout!</string>
    <string name="init_the_bluetooth">Initialize the bluetooth&#8230;</string>
    <string name="conn_ble_success">Connection %s successful!</string>
    <string name="allow">allow</string>
    <string name="setting">setting </string>
    <string name="revert">Revert</string>
    <string name="exit_program_hint">Again according to exit the program</string>
    <string name="random">Random</string>
    <string name="color1">1-color</string>
    <string name="color2">2-color</string>
    <string name="color3">3-color</string>
    <string name="color7">7-color</string>
    <string name="white">White</string>
    <string name="colored">Colored</string>
    <string name="default_">Default</string>
    <string name="full">Full</string>
    <string name="ice_blue">Ice Blue</string>
    <string name="orange">Orange</string>
    <string name="mood">Mood</string>
    <string name="hot_wheels">Hot Wheels</string>
    <string name="spectrum">Spectrum</string>
    <string name="full_spectrum">Full Spectrum</string>
    <string name="morph">Morph</string>
    <string name="beat_meter">Beat Meter</string>
    <string name="cycle_all">Cycle All</string>
    <string name="cycle">Cycle</string>
    <string name="wave">Wave</string>
    <string name="solo">Solo</string>
    <string name="aurora">Aurora</string>
    <string name="well">#</string>
    <string name="g">G:</string>
    <string name="r">R:</string>
    <string name="b">B:</string>
    <string name="et_digits">0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIGKLMNOPQRSTUVWXYZ</string>
    <string name="color_value_hint">Color value of 6!</string>
    <string name="red_color">ff0000</string>
    <string name="restart_hint">Reset to factory default?</string>
    <string name="scan_music_hint">Scan the local music&#8230;</string>
    <string name="song_name">Song name</string>
    <string name="singer">Singer</string>
    <string name="now_playing">Now Playing</string>
    <string name="search_stop">The search timeout !</string>
    <string name="search_cancelled">The search was cancelled !</string>
    <string name="scan">Scan</string>
</resources>
