<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/content_bg">

    <TextView
        android:id="@+id/tv_hint"
        style="@style/main_tv"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/select_an_input" />

    <com.example.txtledbluetooth.widget.ItemLayout
        android:id="@+id/item_bluetooth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_hint"
        custom:iv_left="@mipmap/icon_bluetooth"
        custom:iv_right="@mipmap/icon_selected"
        custom:item_bg="@color/item_selected_bg"
        custom:text_left="@string/bluetooth" />

    <com.example.txtledbluetooth.widget.ItemLayout
        android:id="@+id/item_aux_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_bluetooth"
        custom:iv_left="@mipmap/icon_aux_in"
        custom:text_left="@string/aux_in" />
</RelativeLayout>
