<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit_light"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/content_bg"
    tools:context="com.example.txtledbluetooth.light.EditLightActivity">

    <include
        android:id="@+id/layout_appbar"
        layout="@layout/toolbar" />

    <TextView
        android:id="@+id/tv_chose_color_type"
        style="@style/main_tv"
        android:layout_below="@+id/layout_appbar"
        android:layout_marginLeft="@dimen/item_padding_left"
        android:layout_marginTop="@dimen/item_padding_left"
        android:drawablePadding="@dimen/activity_horizontal_margin"
        android:drawableRight="@mipmap/icon_down_arrow"
        android:textColor="@color/colorAccent" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tv_chose_color_type">

        <com.example.txtledbluetooth.widget.ColorPicker
            android:id="@+id/color_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/activity_vertical_margin" />

        <FrameLayout
            android:id="@+id/fl_color_board"
            android:layout_width="match_parent"
            android:layout_height="@dimen/board_height"
            android:layout_below="@+id/color_picker"
            android:layout_marginTop="@dimen/item_padding_left">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <View
                    style="@style/view_color_board"
                    android:id="@+id/view_board1"
                    android:background="@color/white" />

                <View
                    style="@style/view_color_board"
                    android:id="@+id/view_board2"
                    android:background="@color/black" />

                <View
                    style="@style/view_color_board"
                    android:id="@+id/view_board3"
                    android:background="@color/white" />

                <View
                    style="@style/view_color_board"
                    android:id="@+id/view_board4"
                    android:background="@color/colorAccent" />

                <View
                    style="@style/view_color_board"
                    android:id="@+id/view_board5"
                    android:background="@color/black" />

                <View
                    style="@style/view_color_board"
                    android:id="@+id/view_board6"
                    android:background="@color/item_selected_bg" />

                <View
                    style="@style/view_color_board"
                    android:id="@+id/view_board7"
                    android:background="@color/black" />
            </LinearLayout>
            <RadioGroup
                android:id="@+id/rg_color_board"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_board1"
                    style="@style/rb_color_board" />

                <RadioButton
                    android:id="@+id/rb_board2"
                    style="@style/rb_color_board" />

                <RadioButton
                    android:id="@+id/rb_board3"
                    style="@style/rb_color_board" />

                <RadioButton
                    android:id="@+id/rb_board4"
                    style="@style/rb_color_board" />

                <RadioButton
                    android:id="@+id/rb_board5"
                    style="@style/rb_color_board" />

                <RadioButton
                    android:id="@+id/rb_board6"
                    style="@style/rb_color_board" />

                <RadioButton
                    android:id="@+id/rb_board7"
                    style="@style/rb_color_board" />
            </RadioGroup>


        </FrameLayout>

        <LinearLayout
            android:id="@+id/layout_color_rgb"
            android:layout_width="match_parent"
            android:layout_height="@dimen/board_height"
            android:layout_below="@+id/fl_color_board"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    style="@style/main_tv"
                    android:text="@string/g" />

                <EditText
                    android:id="@+id/tv_r"
                    style="@style/main_tv"
                    android:layout_height="match_parent"
                    android:background="@color/item_selected_bg"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="3"
                    android:maxLines="1"
                    android:paddingLeft="@dimen/min_margin"
                    android:paddingRight="@dimen/item_padding_left"
                    android:text="40" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    style="@style/main_tv"
                    android:text="@string/r" />

                <EditText
                    android:id="@+id/tv_g"
                    style="@style/main_tv"
                    android:layout_height="match_parent"
                    android:background="@color/item_selected_bg"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="3"
                    android:maxLines="1"
                    android:paddingLeft="@dimen/min_margin"
                    android:paddingRight="@dimen/item_padding_left"
                    android:text="40" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    style="@style/main_tv"
                    android:text="@string/b" />

                <EditText
                    android:id="@+id/tv_b"
                    style="@style/main_tv"
                    android:layout_height="match_parent"
                    android:background="@color/item_selected_bg"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="3"
                    android:maxLines="1"
                    android:paddingLeft="@dimen/min_margin"
                    android:paddingRight="@dimen/item_padding_left"
                    android:text="40" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    style="@style/main_tv"
                    android:text="@string/well" />

                <EditText
                    android:id="@+id/tv_well"
                    style="@style/main_tv"
                    android:layout_height="match_parent"
                    android:background="@color/item_selected_bg"
                    android:digits="@string/et_digits"
                    android:gravity="center"
                    android:maxLength="6"
                    android:maxLines="1"
                    android:paddingLeft="@dimen/min_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:text="F89150" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_brightness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_color_rgb"
            android:layout_marginLeft="@dimen/board_height"
            android:layout_marginRight="@dimen/board_height"
            android:layout_marginTop="@dimen/divide_padding_right"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/icon_decrease_brightness" />

            <SeekBar
                android:id="@+id/sb_brightness"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/min_margin"
                android:layout_marginRight="@dimen/min_margin"
                android:layout_weight="1"
                android:max="100"
                android:maxHeight="@dimen/seek_bar_height"
                android:minHeight="@dimen/seek_bar_height"
                android:progressDrawable="@drawable/seek_bar" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/icon_increase_brightness" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_brightness"
            android:layout_marginLeft="@dimen/board_height"
            android:layout_marginRight="@dimen/board_height"
            android:layout_marginTop="@dimen/item_padding_left"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/icon_decrease_brightness" />

            <SeekBar
                android:id="@+id/sb_speed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/min_margin"
                android:layout_marginRight="@dimen/min_margin"
                android:layout_weight="1"
                android:max="100"
                android:maxHeight="@dimen/seek_bar_height"
                android:minHeight="@dimen/seek_bar_height"
                android:progressDrawable="@drawable/seek_bar" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/icon_increase_brightness" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
